--- a/index.html
+++ b/index.html
@@ -3,23 +3,69 @@
 <head>
   <meta charset="utf-8">
   <title>Antonio Montalvo's Responsive Layout</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 <body>
-<h1>Responsive</h1>
+  <div class="wrapper"> <!--Sticky footer-->
+    <header class="main-header">
+      <h1 class="my_name">Antonio Montalvo</h1>
+      <ul class="main-nav">
+        <li>HOME</li>
+        <li>PORTFOLIO</li>
+        <li>CONTACT</li>
+      </ul>
+    </header>
 
+    <div class="banner">
+      <span>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end wed development at Treehouse and am excited to put all my skills to use!
+      </span>
+      <img src="img/responsive-layout-profile.png" alt="profile image" />
+    </div>
 
+    <div class="main-content">
+      <h2>PORTFOLIO</h2>
 
-
-
-
-
-
-
-
-
+        <img src="img/portfolio-1.png" alt="Front page icon" />
+        <h3>Marketing Page</h3>
+        <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.
+        </p>
+        <img src="img/portfolio-2.png" alt="Search page icon" />
+        <h3>Search Page</h3>
+        <p>This projects searches for a specific data base to find information that the user is trying to look up.
+        </p>
+        <img src="img/portfolio-3.png" alt="Travel page icon" />
+        <h3>Travel App</h3>
+        <p>This project compares travel times based on different transportation methods and tells you the best.
+        </p>
+        <img src="img/portfolio-6.png" alt="Map page icon" />
+        <h3>Map of Favorite Spots</h3>
+        <p>This project uses a mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
+        </p>
+        <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
+        <h3>Photo Gallery</h3>
+        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
+        <img src="img/portfolio-4.png" alt="Calculator page icon" />
+        <h3>Calculator</h3>
+        <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
+        </p>
+    </div>
+    <section class="contact-info">
+      <h2>CONTACT</h2>
+      <p>if you are interested in chatting or want more information about what i've been working on, I'd love to hear from you!
+      </p>
+      <ul>
+        <li>Phone  <span class="boldtext">+1(818)929-4020</span></li>
+        <li>Email  <span class="boldtext">montalvocode@yahoo.com</span></li>
+      </ul>
+    </section>
+    <footer>
+      <h2 class="my_name-footer">Antonio Montalvo</h2>
+      <h2 class="my_name_footer">BACK TO TOP</h2>
+    </footer>
+  </div>
 </body>
 </html>
