add font color, size,
worked on matching text color and size

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Antonio Montalvo's Responsive Layout</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.css">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|PT+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="wrapper"> <!--Sticky footer-->
@@ -54,17 +53,21 @@
         </p>
     </div>
     <section class="contact-info">
-      <h2>CONTACT</h2>
+      <h3>CONTACT</h3>
       <p>if you are interested in chatting or want more information about what i've been working on, I'd love to hear from you!
       </p>
       <ul>
-        <li>Phone  <span class="boldtext">+1(818)929-4020</span></li>
-        <li>Email  <span class="boldtext">montalvocode@yahoo.com</span></li>
+        <li>Phone</li>
+        <li class="value">+1(818)929-4020</li>
+      </ul>
+      <ul>
+        <li>Email</li>
+        <li class="value">montalvocode@yahoo.com</li>
       </ul>
     </section>
-    <footer>
-      <h2 class="my_name-footer">Antonio Montalvo</h2>
-      <h2 class="my_name_footer">BACK TO TOP</h2>
+    <footer  class="my-name-footer">
+      <h4>Antonio Montalvo</h4>
+      <h4>BACK TO TOP</h4>
     </footer>
   </div>
 </body>
