add navigation markup
flex box nav

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="wrapper"> <!--Sticky footer-->
     <header class="main-header">
-      <h1 class="my_name" id="top_page">Antonio Montalvo</h1>
-      <ul class="main-nav">
+      <h1 class="my-name" id="top_page">Antonio Montalvo</h1>
+      <ul class="nav">
         <li><a href="#top_page">HOME</a></li>
         <li><a href="#content">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
