--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Antonio Montalvo's Responsive Layout</title>
   <link rel="stylesheet" href="css/normalize.css">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|PT+Sans' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700PT+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -47,7 +47,7 @@
         </p>
         <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
         <h3>Photo Gallery</h3>
-        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
+        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
         <img src="img/portfolio-4.png" alt="Calculator page icon" />
         <h3>Calculator</h3>
         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
@@ -55,7 +55,7 @@
     </div>
     <section class="contact-info">
       <h3 id="contact">CONTACT</h3>
-      <p>if you are interested in chatting or want more information about what i've been working on, I'd love to hear from you!
+      <p>if you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!
       </p>
       <ul>
         <li>Phone</li>
