--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
       </ul>
     </header>
 
-    <div class="banner">
-      <img src="img/responsive-layout-profile.png" alt="profile image" />
+    <div class="banner clearfix">
+      <figure class="image-background">
+      <img class="profile-image" src="img/profile.png" alt="profile image" />
+      </figure>
       <span>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end wed development at Treehouse and am excited to put all my skills to use!
       </span>
+
 
     </div>
 
@@ -53,7 +56,7 @@
         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
         </p>
     </div>
-    <section class="contact-info">
+    <div class="contact-info">
       <h3 id="contact">CONTACT</h3>
       <p>if you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!
       </p>
@@ -65,7 +68,7 @@
         <li>Email</li>
         <li class="value">montalvocode@yahoo.com</li>
       </ul>
-    </section>
+    </div>
     <footer  class="my-name-footer">
       <h4>Antonio Montalvo</h4>
       <h4><a href="#top_page">BACK TO TOP</a></h4>
