--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="wrapper"> <!--Sticky footer-->
     <header class="main-header">
       <h1 class="my-name" id="top_page">Antonio Montalvo</h1>
       <ul class="nav">
         <li><a href="#top_page">HOME</a></li>
         <li><a href="#content">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#skills">GOALS</a></li>
       </ul>
     </header>
 
@@ -25,38 +25,55 @@
       </figure>
       <span>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end wed development at Treehouse and am excited to put all my skills to use!
       </span>
-
-
     </div>
 
-    <div class="main-content">
+    <div class="main-content clearfix" class="container claerfix">
       <h2 id="content">PORTFOLIO</h2>
-
-        <img src="img/portfolio-1.png" alt="Front page icon" />
-        <h3>Marketing Page</h3>
-        <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.
-        </p>
-        <img src="img/portfolio-2.png" alt="Search page icon" />
-        <h3>Search Page</h3>
-        <p>This projects searches for a specific data base to find information that the user is trying to look up.
-        </p>
-        <img src="img/portfolio-3.png" alt="Travel page icon" />
-        <h3>Travel App</h3>
-        <p>This project compares travel times based on different transportation methods and tells you the best.
-        </p>
-        <img src="img/portfolio-6.png" alt="Map page icon" />
-        <h3>Map of Favorite Spots</h3>
-        <p>This project uses a mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
-        </p>
-        <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
-        <h3>Photo Gallery</h3>
-        <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-        <img src="img/portfolio-4.png" alt="Calculator page icon" />
-        <h3>Calculator</h3>
-        <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
-        </p>
+        <div class="left-col clearfix">
+          <img src="img/portfolio-1.png" alt="Front page icon" />
+          <h3>Marketing Page</h3>
+          <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.
+          </p>
+          <img src="img/portfolio-2.png" alt="Search page icon" />
+          <h3>Search Page</h3>
+          <p>This projects searches for a specific data base to find information that the user is trying to look up.
+          </p>
+          <img src="img/portfolio-3.png" alt="Travel page icon" />
+          <h3>Travel App</h3>
+          <p>This project compares travel times based on different transportation methods and tells you the best.
+          </p>
+        </div>
+        <div class="right-col" clearfix>
+          <img src="img/portfolio-6.png" alt="Map page icon" />
+          <h3>Map of Favorite Spots</h3>
+          <p>This project uses a mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
+          </p>
+          <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
+          <h3>Photo Gallery</h3>
+          <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+          <img src="img/portfolio-4.png" alt="Calculator page icon" />
+          <h3>Calculator</h3>
+          <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
+          </p>
+      </div>
     </div>
-    <div class="contact-info">
+    <div class="added-content clearfix ">
+      <h3 id="skills">GOALS</h3>
+      <p>I'm working on a full-stack curriculum that includes HTML, CSS, JavaScript, JQuery, Node.js, MongoDB, Heroku, Swift and PHP.</p>
+      <ul class="skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+          <li>Swift</li>
+          <li>JQuery</li>
+          <li>Node.js</li>
+          <li>MongoDB</li>
+          <li>Heroku</li>
+        </ul>
+
+    </div>
+    <div class="contact-info clearfix">
       <h3 id="contact">CONTACT</h3>
       <p>if you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!
       </p>
@@ -73,6 +90,6 @@
       <h4>Antonio Montalvo</h4>
       <h4><a href="#top_page">BACK TO TOP</a></h4>
     </footer>
-  </div>
+  
 </body>
 </html>
