--- a/index.html
+++ b/index.html
@@ -27,35 +27,48 @@
       </span>
     </div>
 
-    <div class="main-content clearfix" class="container claerfix">
+    <div class="main-content clearfix">
       <h2 id="content">PORTFOLIO</h2>
-        <div class="left-col clearfix">
-          <img src="img/portfolio-1.png" alt="Front page icon" />
-          <h3>Marketing Page</h3>
-          <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.
-          </p>
-          <img src="img/portfolio-2.png" alt="Search page icon" />
-          <h3>Search Page</h3>
-          <p>This projects searches for a specific data base to find information that the user is trying to look up.
-          </p>
-          <img src="img/portfolio-3.png" alt="Travel page icon" />
-          <h3>Travel App</h3>
-          <p>This project compares travel times based on different transportation methods and tells you the best.
-          </p>
+        <div class="primary col">
+            <img src="img/portfolio-1.png" alt="Front page icon" />
+            <h3>Marketing Page</h3>
+            <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
         </div>
-        <div class="right-col" clearfix>
-          <img src="img/portfolio-6.png" alt="Map page icon" />
-          <h3>Map of Favorite Spots</h3>
-          <p>This project uses a mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
-          </p>
-          <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
-          <h3>Photo Gallery</h3>
-          <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-          <img src="img/portfolio-4.png" alt="Calculator page icon" />
-          <h3>Calculator</h3>
-          <p>Someone can enter in the numbers they want, and press the big blue button and get the result.
-          </p>
-      </div>
+        <div class="secondary col">
+            <img src="img/portfolio-2.png" alt="Search page icon" />
+            <h3>Search Page</h3>
+            <p>This projects searches for a specific data base to find information that the user is trying to look up.</p>
+        </div>
+        <div class="primary col">
+            <img src="img/portfolio-3.png" alt="Travel page icon" />
+            <h3>Travel App</h3>
+            <p>This project compares travel times based on different transportation methods and tells you the best.</p>
+       </div>
+       <div class="secondary col">
+            <img src="img/portfolio-9.png" alt="PHP page icon" />
+            <h3>PHP Web site</h3>
+            <p>This project shows what you can do with "include" in PHP. </p>
+        </div>
+        <div class="primary col">
+            <img src="img/portfolio-6.png" alt="Map page icon" />
+            <h3>Map of Favorite Spots</h3>
+            <p>This project uses a mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+        </div>
+        <div class="secondary col">
+            <img src="img/portfolio-5.png" alt="Photo gallery page icon" />
+            <h3>Photo Gallery</h3>
+            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+        </div>
+        <div class="primary col">
+            <img src="img/portfolio-4.png" alt="Calculator page icon" />
+            <h3>Calculator</h3>
+            <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+        </div>
+        <div class="secondary col">
+            <img src="img/portfolio-10.png" alt="Html form" />
+            <h3>HTML Form</h3>
+            <p>This page shows my latest Html form.</p>
+        </div>
     </div>
     <div class="added-content clearfix ">
       <h3 id="skills">GOALS</h3>
@@ -85,11 +98,12 @@
         <li>Email</li>
         <li class="value">montalvocode@yahoo.com</li>
       </ul>
+     </div>
     </div>
     <footer  class="my-name-footer">
       <h4>Antonio Montalvo</h4>
       <h4><a href="#top_page">BACK TO TOP</a></h4>
     </footer>
-  
+
 </body>
 </html>
