--- a/index.html
+++ b/index.html
@@ -102,8 +102,14 @@
 
     <footer  class="my-name-footer">
       <h4>Antonio Montalvo</h4>
-      <h4><a href="#top_page">BACK TO TOP</a></h4>
-    
+      <h4><a href="#top_page" class="mobile-only">BACK TO TOP</a></h4>
+      <ul class="footer-nav">
+        <li><a href="#top_page">HOME</a></li>
+        <li><a href="#content">PORTFOLIO</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#skills">GOALS</a></li>
+      </ul>
+
     </footer>
 
 </body>
