--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Antonio Montalvo's Responsive Layout</title>
   <link rel="stylesheet" href="css/normalize.css">
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700PT+Sans' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Arvo:400,700/Vollkorn:400,400italic' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
